# fastapi-tdd-docker

./: .editorconfig  .gitignore  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: main.yml
project/: .dockerignore  .editorconfig  Dockerfile  Dockerfile.prod  pyproject.toml  requirements.txt  setup.cfg
project/app/: config.py  db.py  main.py
project/app/api/: crud.py  summaries.py
project/requirements/: dev.txt  production.txt
project/tests/: conftest.py  test_summaries.py
