[tool.poetry]
name = "fastapi-tdd-docker"
version = "0.1.0"
description = ""
authors = ["Simone Dalla <simodalla@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.109.2"
uvicorn = "^0.27.1"
pydantic-settings = "^2.1.0"
asyncpg = "^0.29.0"
tortoise-orm = "^0.20.0"
aerich = "^0.7.2"


[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
pytest-sugar = "^1.0.0"
httpx = "^0.26.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 100
extend-select = ['Q', 'RUF100', 'C90', 'UP', 'I', 'T']
ignore = ["G004"] #["B008", "SIM102"]
unfixable = ["G004", "F401"]
exclude = [
  ".git",
  ".mypy_cache",
  ".pre-commit-cache",
  ".ruff_cache",
  ".tox",
  ".venv",
  "venv",
  "docs",
  "__pycache",
  "**/migrations/*",
]
target-version = "py312"
mccabe = { max-complexity = 14 }

[tool.ruff.lint.isort]
known-first-party = ["app"]
section-order = [
  "future",
  "standard-library",
  "third-party",
  "first-party",
  "local-folder"]
